--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <h3>Text to PDF Generator</h3>
             <p>Convert your text documents to professional PDFs with custom letterhead and formatting options.</p>
             <button class="solution-btn">
-              <i class="fas fa-external-link-alt"></i> Open Solution
+              <i class="https://hisandeepkumar.github.io/textonletterhead/"></i> Open Solution
             </button>
           </div>
           
