--- a/add-page-numbers.html
+++ b/add-page-numbers.html
@@ -1,1 +1,474 @@
-temp
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PDF Page Number Adder</title>
+  <script src="https://unpkg.com/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    }
+
+    body {
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 24px;
+      color: #f0f0f0;
+      background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://4kwallpapers.com/images/wallpapers/macos-big-sur-apple-layers-fluidic-colorful-wwdc-stock--1455.jpg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
+
+    .container {
+      width: 100%;
+      max-width: 640px;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 20px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2), 0 4px 16px rgba(255, 255, 255, 0.1), inset 0 1px 2px rgba(255, 255, 255, 0.3);
+      overflow: hidden;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      transition: transform 0.3s ease;
+      padding: 32px;
+    }
+
+    .container:hover {
+      transform: perspective(1000px) rotateX(2deg) rotateY(2deg);
+    }
+
+    .header {
+      padding: 24px;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.05);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+      margin-bottom: 24px;
+    }
+
+    .header h1 {
+      font-size: 28px;
+      font-weight: 600;
+      color: #f0f0f0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
+    }
+
+    .header h1 i {
+      color: #5b86e5;
+      font-size: 28px;
+    }
+
+    .upload-area {
+      border: 2px dashed rgba(255, 255, 255, 0.4);
+      border-radius: 12px;
+      padding: 40px 20px;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.2);
+      cursor: pointer;
+      transition: all 0.3s ease;
+      position: relative;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2), inset 0 1px 2px rgba(255, 255, 255, 0.3);
+      margin-bottom: 24px;
+    }
+
+    .upload-area:hover, .upload-area.active {
+      background: rgba(255, 255, 255, 0.25);
+      border-color: #5b86e5;
+      box-shadow: 0 8px 24px rgba(91, 134, 229, 0.3), inset 0 2px 4px rgba(255, 255, 255, 0.3);
+    }
+
+    .upload-area i {
+      font-size: 40px;
+      color: #5b86e5;
+      margin-bottom: 15px;
+      transition: all 0.3s;
+    }
+
+    .upload-area:hover i, .upload-area.active i {
+      transform: scale(1.1);
+    }
+
+    .upload-area h3 {
+      color: #f0f0f0;
+      margin-bottom: 10px;
+      font-size: 1.6rem;
+      font-weight: 500;
+    }
+
+    .upload-area p {
+      color: rgba(255, 255, 255, 0.8);
+      font-size: 1.1rem;
+    }
+
+    .upload-area input[type="file"] {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      cursor: pointer;
+    }
+
+    .file-info {
+      color: white;
+      font-size: 1rem;
+      margin: 10px 0;
+      text-align: center;
+      word-break: break-all;
+      padding: 0 10px;
+      display: none;
+      font-weight: bold;
+      text-decoration: underline;
+      background: linear-gradient(
+          90deg,
+          rgba(255, 255, 255, 0) 0%,
+          rgba(255, 255, 255, 0.8) 50%,
+          rgba(255, 255, 255, 0) 100%
+      );
+      background-size: 200% 100%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: shine 2s linear infinite;
+    }
+
+    @keyframes shine {
+      from {
+        background-position: 200% 0;
+      }
+      to {
+        background-position: -200% 0;
+      }
+    }
+
+    .progress-container {
+      width: 100%;
+      height: 8px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 4px;
+      overflow: hidden;
+      margin-top: 20px;
+      display: none;
+    }
+
+    .progress-bar {
+      width: 0;
+      height: 100%;
+      background: #5b86e5;
+      transition: width 0.3s ease;
+    }
+
+    .btn {
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(12px);
+      color: #f0f0f0;
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      padding: 14px 32px;
+      border-radius: 30px;
+      width: 280px;
+      height: 60px;
+      font-size: 16px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      box-shadow: 0 8px 24px rgba(91, 134, 229, 0.4), 0 4px 12px rgba(0, 0, 0, 0.2), inset 0 2px 4px rgba(255, 255, 255, 0.3), inset 0 -2px 4px rgba(0, 0, 0, 0.1);
+      position: relative;
+      overflow: hidden;
+      margin: 24px auto 0;
+      white-space: nowrap;
+      text-align: center;
+    }
+
+    .btn::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -150%;
+      width: 150%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
+      transition: all 0.6s ease;
+    }
+
+    .btn:hover::before {
+      left: 150%;
+    }
+
+    .btn:hover {
+      background: rgba(255, 255, 255, 0.3);
+      transform: perspective(1000px) rotateX(5deg) rotateY(5deg);
+      box-shadow: 0 12px 32px rgba(91, 134, 229, 0.5), 0 6px 16px rgba(0, 0, 0, 0.3), inset 0 2px 4px rgba(255, 255, 255, 0.4), inset 0 -2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .btn:disabled {
+      background: rgba(255, 255, 255, 0.1);
+      cursor: not-allowed;
+      box-shadow: none;
+      transform: none;
+    }
+
+    .btn:disabled::before {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        padding: 16px;
+      }
+      .header {
+        padding: 16px;
+      }
+      .header h1 {
+        font-size: 24px;
+      }
+      .upload-area {
+        padding: 24px 16px;
+      }
+      .btn {
+        width: 240px;
+        height: 50px;
+        font-size: 14px;
+        padding: 12px 24px;
+      }
+      .file-info {
+        font-size: 0.9rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="header">
+      <h1><i class="fas fa-file-pdf"></i> PDF Page Number Adder</h1>
+    </div>
+    <div class="upload-area" id="uploadArea">
+      <i class="fas fa-cloud-upload-alt"></i>
+      <h3>Upload PDF File</h3>
+      <p>Click here or drag and drop your PDF file</p>
+      <input type="file" id="pdfUpload" accept="application/pdf" hidden>
+    </div>
+    <p class="file-info" id="fileInfo"></p>
+    <div class="progress-container" id="progressContainer">
+      <div class="progress-bar" id="progressBar"></div>
+    </div>
+    <button class="btn" id="generateBtn" disabled>
+      <i class="fas fa-cogs"></i>
+      <span>Generate with Page Numbers</span>
+    </button>
+  </div>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const uploadArea = document.getElementById('uploadArea');
+      const fileInput = document.getElementById('pdfUpload');
+      const generateBtn = document.getElementById('generateBtn');
+      const fileInfoDisplay = document.getElementById('fileInfo');
+      const progressContainer = document.getElementById('progressContainer');
+      const progressBar = document.getElementById('progressBar');
+
+      let vibrationInterval = null; // To manage the vibration interval
+
+      // Format file size to human-readable format
+      function formatFileSize(bytes) {
+        if (bytes < 1024) return bytes + ' B';
+        else if (bytes < 1024 * 1024) return (bytes / 1024).toFixed(2) + ' KB';
+        else return (bytes / (1024 * 1024)).toFixed(2) + ' MB';
+      }
+
+      // Start vibration synchronized with shine animation
+      function startVibration() {
+        if ('vibrate' in navigator) {
+          // Trigger a 50ms vibration at the start of each 2-second shine animation cycle
+          vibrationInterval = setInterval(() => {
+            navigator.vibrate(50); // Short 50ms vibration
+          }, 2000); // Matches the 2-second duration of the shine animation
+        }
+      }
+
+      // Stop vibration
+      function stopVibration() {
+        if (vibrationInterval) {
+          clearInterval(vibrationInterval);
+          vibrationInterval = null;
+        }
+      }
+
+      // Upload area click handler
+      uploadArea.addEventListener('click', () => {
+        fileInput.click();
+      });
+
+      // Drag and drop functionality
+      ['dragenter', 'dragover'].forEach(eventName => {
+        uploadArea.addEventListener(eventName, (e) => {
+          e.preventDefault();
+          uploadArea.classList.add('active');
+        });
+      });
+
+      ['dragleave', 'drop'].forEach(eventName => {
+        uploadArea.addEventListener(eventName, (e) => {
+          e.preventDefault();
+          uploadArea.classList.remove('active');
+        });
+      });
+
+      uploadArea.addEventListener('drop', (e) => {
+        if (e.dataTransfer.files.length) {
+          fileInput.files = e.dataTransfer.files;
+          handleFileSelection(e.dataTransfer.files[0]);
+        }
+      });
+
+      // File input change handler
+      fileInput.addEventListener('change', (e) => {
+        if (e.target.files.length) {
+          handleFileSelection(e.target.files[0]);
+        }
+      });
+
+      // Generate button click handler
+      generateBtn.addEventListener('click', () => {
+        stopVibration(); // Stop vibration when generate button is clicked
+        generatePDF();
+      });
+
+      // Handle file selection
+      function handleFileSelection(file) {
+        if (file.type !== 'application/pdf') {
+          alert('Please select a PDF file');
+          fileInfoDisplay.textContent = '';
+          fileInfoDisplay.style.display = 'none';
+          generateBtn.disabled = true;
+          stopVibration(); // Stop vibration if invalid file
+          return;
+        }
+        fileInfoDisplay.textContent = `${file.name} (${formatFileSize(file.size)})`;
+        fileInfoDisplay.style.display = 'block';
+        generateBtn.disabled = false;
+        startVibration(); // Start vibration when file is selected
+      }
+
+      // Simulate progress for the progress bar
+      function updateProgress(percent) {
+        progressContainer.style.display = 'block';
+        progressBar.style.width = `${percent}%`;
+      }
+
+      // Generate PDF with page numbers
+      async function generatePDF() {
+        if (!fileInput.files.length) {
+          alert('Please upload a PDF file');
+          return;
+        }
+
+        generateBtn.disabled = true;
+        const file = fileInput.files[0];
+
+        try {
+          // Show progress bar and simulate progress
+          updateProgress(0);
+          const arrayBuffer = await file.arrayBuffer();
+          updateProgress(20);
+
+          const pdfDoc = await PDFLib.PDFDocument.load(arrayBuffer);
+          updateProgress(40);
+
+          const pages = pdfDoc.getPages();
+          const totalPages = pages.length;
+          const font = await pdfDoc.embedFont(PDFLib.StandardFonts.HelveticaBold);
+          updateProgress(60);
+
+          for (let i = 0; i < totalPages; i++) {
+            const page = pages[i];
+            const { width, height } = page.getSize();
+            const fontSize = 12;
+            const padding = 8;
+            const text = `Page ${i + 1}`;
+            const textWidth = font.widthOfTextAtSize(text, fontSize);
+            const boxWidth = textWidth + padding * 2;
+            const boxHeight = fontSize + padding * 2;
+            const x = width - boxWidth - 40;
+            const y = 30;
+
+            page.drawRectangle({
+              x: x,
+              y: y,
+              width: boxWidth,
+              height: boxHeight,
+              color: PDFLib.rgb(0, 0, 0),
+              borderWidth: 0,
+              borderColor: PDFLib.rgb(0, 0, 0),
+              opacity: 1,
+              borderRadius: 15,
+            });
+
+            page.drawText(text, {
+              x: x + padding,
+              y: y + padding,
+              size: fontSize,
+              font: font,
+              color: PDFLib.rgb(1, 1, 1),
+            });
+
+            // Update progress for each page
+            updateProgress(60 + ((i + 1) / totalPages) * 30);
+          }
+
+          const pdfBytes = await pdfDoc.save();
+          updateProgress(95);
+
+          const blob = new Blob([pdfBytes], { type: 'application/pdf' });
+          const url = URL.createObjectURL(blob);
+          const a = document.createElement('a');
+          a.href = url;
+          a.download = 'numbered-document.pdf';
+          
+          // Trigger vibration on mobile devices for download
+          if ('vibrate' in navigator) {
+            navigator.vibrate(50); // Vibrate for 200ms
+          }
+
+          document.body.appendChild(a);
+          a.click();
+          document.body.removeChild(a);
+          URL.revokeObjectURL(url);
+          updateProgress(100);
+
+          // Reset UI
+          fileInput.value = '';
+          fileInfoDisplay.textContent = '';
+          fileInfoDisplay.style.display = 'none';
+          generateBtn.disabled = true;
+          stopVibration(); // Ensure vibration stops after download
+          setTimeout(() => {
+            progressContainer.style.display = 'none';
+            progressBar.style.width = '0%';
+          }, 500);
+        } catch (error) {
+          alert(`Error processing PDF: ${error.message}`);
+          generateBtn.disabled = false;
+          fileInfoDisplay.style.display = 'block';
+          progressContainer.style.display = 'none';
+          progressBar.style.width = '0%';
+          stopVibration(); // Stop vibration on error
+        }
+      }
+    });
+  </script>
+</body>
+</html>
