--- a/merge-pdf.html
+++ b/merge-pdf.html
@@ -1,1 +1,533 @@
-temp
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PDF Merger</title>
+  <script src="https://unpkg.com/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    }
+
+    body {
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 24px;
+      color: #f0f0f0;
+      background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://4kwallpapers.com/images/wallpapers/macos-big-sur-apple-layers-fluidic-colorful-wwdc-stock--1455.jpg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
+
+    .container {
+      width: 100%;
+      max-width: 640px;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 20px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2), 0 4px 16px rgba(255, 255, 255, 0.1), inset 0 1px 2px rgba(255, 255, 255, 0.3);
+      overflow: hidden;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      transition: transform 0.3s ease;
+      padding: 32px;
+    }
+
+    .container:hover {
+      transform: perspective(1000px) rotateX(2deg) rotateY(2deg);
+    }
+
+    .header {
+      padding: 24px;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.05);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+      margin-bottom: 24px;
+    }
+
+    .header h1 {
+      font-size: 28px;
+      font-weight: 600;
+      color: #f0f0f0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
+    }
+
+    .header h1 i {
+      color: #5b86e5;
+      font-size: 28px;
+    }
+
+    .upload-area {
+      border: 2px dashed rgba(255, 255, 255, 0.4);
+      border-radius: 12px;
+      padding: 40px 20px;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.2);
+      cursor: pointer;
+      transition: all 0.3s ease;
+      position: relative;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2), inset 0 1px 2px rgba(255, 255, 255, 0.3);
+      margin-bottom: 24px;
+    }
+
+    .upload-area:hover, .upload-area.active {
+      background: rgba(255, 255, 255, 0.25);
+      border-color: #5b86e5;
+      box-shadow: 0 8px 24px rgba(91, 134, 229, 0.3), inset 0 2px 4px rgba(255, 255, 255, 0.3);
+    }
+
+    .upload-area i {
+      font-size: 40px;
+      color: #5b86e5;
+      margin-bottom: 15px;
+      transition: all 0.3s;
+    }
+
+    .upload-area:hover i, .upload-area.active i {
+      transform: scale(1.1);
+    }
+
+    .upload-area h3 {
+      color: #f0f0f0;
+      margin-bottom: 10px;
+      font-size: 1.6rem;
+      font-weight: 500;
+    }
+
+    .upload-area p {
+      color: rgba(255, 255, 255, 0.8);
+      font-size: 1.1rem;
+    }
+
+    .upload-area input[type="file"] {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      cursor: pointer;
+    }
+
+    .file-list {
+      margin: 20px 0;
+      max-height: 200px;
+      overflow-y: auto;
+      padding: 0 10px;
+    }
+
+    .file-item {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 8px;
+      margin-bottom: 10px;
+      color: white;
+      font-size: 1rem;
+      word-break: break-all;
+      font-weight: bold;
+      text-decoration: underline;
+      background: linear-gradient(
+          90deg,
+          rgba(255, 255, 255, 0) 0%,
+          rgba(255, 255, 255, 0.8) 50%,
+          rgba(255, 255, 255, 0) 100%
+      );
+      background-size: 200% 100%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: shine 2s linear infinite;
+    }
+
+    @keyframes shine {
+      from {
+        background-position: 200% 0;
+      }
+      to {
+        background-position: -200% 0;
+      }
+    }
+
+    .file-item span {
+      flex-grow: 1;
+      margin-left: 10px;
+    }
+
+    .file-item .controls {
+      display: flex;
+      gap: 10px;
+    }
+
+    .file-item .controls i {
+      cursor: pointer;
+      color: #5b86e5;
+      font-size: 18px;
+      transition: transform 0.2s;
+    }
+
+    .file-item .controls i:hover {
+      transform: scale(1.2);
+    }
+
+    .file-item .controls i.disabled {
+      color: rgba(255, 255, 255, 0.3);
+      cursor: not-allowed;
+    }
+
+    .add-file-btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 40px;
+      height: 40px;
+      background: #5b86e5;
+      border-radius: 50%;
+      color: white;
+      font-size: 20px;
+      cursor: pointer;
+      margin: 10px auto;
+      transition: transform 0.3s ease;
+    }
+
+    .add-file-btn:hover {
+      transform: scale(1.1);
+    }
+
+    .progress-container {
+      width: 100%;
+      height: 8px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 4px;
+      overflow: hidden;
+      margin-top: 20px;
+      display: none;
+    }
+
+    .progress-bar {
+      width: 0;
+      height: 100%;
+      background: #5b86e5;
+      transition: width 0.3s ease;
+    }
+
+    .btn {
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(12px);
+      color: #f0f0f0;
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      padding: 14px 32px;
+      border-radius: 30px;
+      width: 280px;
+      height: 60px;
+      font-size: 16px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      box-shadow: 0 8px 24px rgba(91, 134, 229, 0.4), 0 4px 12px rgba(0, 0, 0, 0.2), inset 0 2px 4px rgba(255, 255, 255, 0.3), inset 0 -2px 4px rgba(0, 0, 0, 0.1);
+      position: relative;
+      overflow: hidden;
+      margin: 24px auto 0;
+      white-space: nowrap;
+      text-align: center;
+    }
+
+    .btn::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -150%;
+      width: 150%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
+      transition: all 0.6s ease;
+    }
+
+    .btn:hover::before {
+      left: 150%;
+    }
+
+    .btn:hover {
+      background: rgba(255, 255, 255, 0.3);
+      transform: perspective(1000px) rotateX(5deg) rotateY(5deg);
+      box-shadow: 0 12px 32px rgba(91, 134, 229, 0.5), 0 6px 16px rgba(0, 0, 0, 0.3), inset 0 2px 4px rgba(255, 255, 255, 0.4), inset 0 -2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .btn:disabled {
+      background: rgba(255, 255, 255, 0.1);
+      cursor: not-allowed;
+      box-shadow: none;
+      transform: none;
+    }
+
+    .btn:disabled::before {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        padding: 16px;
+      }
+      .header {
+        padding: 16px;
+      }
+      .header h1 {
+        font-size: 24px;
+      }
+      .upload-area {
+        padding: 24px 16px;
+      }
+      .btn {
+        width: 240px;
+        height: 50px;
+        font-size: 14px;
+        padding: 12px 24px;
+      }
+      .file-item {
+        font-size: 0.9rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="header">
+      <h1><i class="fas fa-file-pdf"></i> PDF Merger</h1>
+    </div>
+    <div class="upload-area" id="uploadArea">
+      <i class="fas fa-cloud-upload-alt"></i>
+      <h3>Upload PDF Files</h3>
+      <p>Click here or drag and drop your PDF files</p>
+      <input type="file" id="pdfUpload" accept="application/pdf" multiple hidden>
+    </div>
+    <div class="file-list" id="fileList"></div>
+    <div class="add-file-btn" id="addFileBtn" title="Add another PDF">
+      <i class="fas fa-plus"></i>
+    </div>
+    <div class="progress-container" id="progressContainer">
+      <div class="progress-bar" id="progressBar"></div>
+    </div>
+    <button class="btn" id="mergeBtn" disabled>
+      <i class="fas fa-cogs"></i>
+      <span>Generate Merged Document</span>
+    </button>
+  </div>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const uploadArea = document.getElementById('uploadArea');
+      const fileInput = document.getElementById('pdfUpload');
+      const mergeBtn = document.getElementById('mergeBtn');
+      const fileList = document.getElementById('fileList');
+      const addFileBtn = document.getElementById('addFileBtn');
+      const progressContainer = document.getElementById('progressContainer');
+      const progressBar = document.getElementById('progressBar');
+
+      let files = []; // Store selected PDF files
+      let vibrationIntervals = []; // Store vibration intervals for each file
+
+      // Format file size to human-readable format
+      function formatFileSize(bytes) {
+        if (bytes < 1024) return bytes + ' B';
+        else if (bytes < 1024 * 1024) return (bytes / 1024).toFixed(2) + ' KB';
+        else return (bytes / (1024 * 1024)).toFixed(2) + ' MB';
+      }
+
+      // Start vibration synchronized with shine animation
+      function startVibration() {
+        if ('vibrate' in navigator) {
+          const interval = setInterval(() => {
+            navigator.vibrate(50); // Short 50ms vibration
+          }, 2000); // Matches the 2-second shine animation
+          vibrationIntervals.push(interval);
+        }
+      }
+
+      // Stop all vibrations
+      function stopAllVibrations() {
+        vibrationIntervals.forEach(interval => clearInterval(interval));
+        vibrationIntervals = [];
+      }
+
+      // Render file list
+      function renderFileList() {
+        fileList.innerHTML = '';
+        files.forEach((file, index) => {
+          const fileItem = document.createElement('div');
+          fileItem.className = 'file-item';
+          fileItem.innerHTML = `
+            <span>${index + 1}. ${file.name} (${formatFileSize(file.size)})</span>
+            <div class="controls">
+              <i class="fas fa-arrow-up ${index === 0 ? 'disabled' : ''}" data-index="${index}" title="Move Up"></i>
+              <i class="fas fa-arrow-down ${index === files.length - 1 ? 'disabled' : ''}" data-index="${index}" title="Move Down"></i>
+              <i class="fas fa-trash" data-index="${index}" title="Remove"></i>
+            </div>
+          `;
+          fileList.appendChild(fileItem);
+          startVibration(); // Start vibration for each file item
+        });
+        mergeBtn.disabled = files.length < 2; // Enable merge button if 2 or more files
+      }
+
+      // Upload area click handler
+      uploadArea.addEventListener('click', () => {
+        fileInput.click();
+      });
+
+      // Add file button click handler
+      addFileBtn.addEventListener('click', () => {
+        fileInput.click();
+      });
+
+      // Drag and drop functionality
+      ['dragenter', 'dragover'].forEach(eventName => {
+        uploadArea.addEventListener(eventName, (e) => {
+          e.preventDefault();
+          uploadArea.classList.add('active');
+        });
+      });
+
+      ['dragleave', 'drop'].forEach(eventName => {
+        uploadArea.addEventListener(eventName, (e) => {
+          e.preventDefault();
+          uploadArea.classList.remove('active');
+        });
+      });
+
+      uploadArea.addEventListener('drop', (e) => {
+        if (e.dataTransfer.files.length) {
+          handleFileSelection(e.dataTransfer.files);
+        }
+      });
+
+      // File input change handler
+      fileInput.addEventListener('change', (e) => {
+        if (e.target.files.length) {
+          handleFileSelection(e.target.files);
+        }
+      });
+
+      // Handle file selection
+      function handleFileSelection(selectedFiles) {
+        const validFiles = Array.from(selectedFiles).filter(file => file.type === 'application/pdf');
+        if (validFiles.length !== selectedFiles.length) {
+          alert('Please select only PDF files');
+        }
+        files = [...files, ...validFiles];
+        renderFileList();
+        fileInput.value = ''; // Reset input
+      }
+
+      // File list controls (move up, down, remove)
+      fileList.addEventListener('click', (e) => {
+        if (e.target.classList.contains('fa-arrow-up')) {
+          const index = parseInt(e.target.dataset.index);
+          if (index > 0) {
+            [files[index], files[index - 1]] = [files[index - 1], files[index]];
+            renderFileList();
+          }
+        } else if (e.target.classList.contains('fa-arrow-down')) {
+          const index = parseInt(e.target.dataset.index);
+          if (index < files.length - 1) {
+            [files[index], files[index + 1]] = [files[index + 1], files[index]];
+            renderFileList();
+          }
+        } else if (e.target.classList.contains('fa-trash')) {
+          const index = parseInt(e.target.dataset.index);
+          files.splice(index, 1);
+          clearInterval(vibrationIntervals[index]); // Stop vibration for removed file
+          vibrationIntervals.splice(index, 1);
+          renderFileList();
+        }
+      });
+
+      // Merge button click handler
+      mergeBtn.addEventListener('click', () => {
+        stopAllVibrations(); // Stop all vibrations when merge button is clicked
+        mergePDFs();
+      });
+
+      // Simulate progress for the progress bar
+      function updateProgress(percent) {
+        progressContainer.style.display = 'block';
+        progressBar.style.width = `${percent}%`;
+      }
+
+      // Merge PDFs
+      async function mergePDFs() {
+        if (files.length < 2) {
+          alert('Please upload at least two PDF files');
+          return;
+        }
+
+        mergeBtn.disabled = true;
+        try {
+          updateProgress(0);
+          const mergedPdf = await PDFLib.PDFDocument.create();
+          updateProgress(10);
+
+          for (let i = 0; i < files.length; i++) {
+            const arrayBuffer = await files[i].arrayBuffer();
+            const pdf = await PDFLib.PDFDocument.load(arrayBuffer);
+            const copiedPages = await mergedPdf.copyPages(pdf, pdf.getPageIndices());
+            copiedPages.forEach(page => mergedPdf.addPage(page));
+            updateProgress(10 + ((i + 1) / files.length) * 80);
+          }
+
+          const pdfBytes = await mergedPdf.save();
+          updateProgress(95);
+
+          const blob = new Blob([pdfBytes], { type: 'application/pdf' });
+          const url = URL.createObjectURL(blob);
+          const a = document.createElement('a');
+          a.href = url;
+          a.download = 'merged-document.pdf';
+
+          // Trigger vibration on mobile devices for download
+          if ('vibrate' in navigator) {
+            navigator.vibrate(200); // Vibrate for 200ms
+          }
+
+          document.body.appendChild(a);
+          a.click();
+          document.body.removeChild(a);
+          URL.revokeObjectURL(url);
+          updateProgress(100);
+
+          // Reset UI
+          files = [];
+          fileList.innerHTML = '';
+          mergeBtn.disabled = true;
+          stopAllVibrations();
+          setTimeout(() => {
+            progressContainer.style.display = 'none';
+            progressBar.style.width = '0%';
+          }, 500);
+        } catch (error) {
+          alert(`Error merging PDFs: ${error.message}`);
+          mergeBtn.disabled = false;
+          progressContainer.style.display = 'none';
+          progressBar.style.width = '0%';
+          stopAllVibrations();
+        }
+      }
+    });
+  </script>
+</body>
+</html>
