--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         
         <div class="solutions-grid">
           <!-- PDF Editor -->
-          <a href="pdf-editor.html" class="subject-button">
+          <a href="https://www.sejda.com/pdf-editor" class="subject-button">
             <div class="button-icon">
               <i class="fas fa-edit"></i>
             </div>
