--- a/index.html
+++ b/index.html
@@ -332,12 +332,15 @@
         
         <div class="solutions-grid">
           <!-- PDF Editor -->
-          <a href="https://www.sejda.com/pdf-editor" class="subject-button">
-            <div class="button-icon">
-              <i class="fas fa-edit"></i>
-            </div>
-            <h3>PDF Editor</h3>
-            <span>Edit text in existing PDF documents</span>
+          <a href="https://www.sejda.com/pdf-editor" 
+   target="_blank" 
+   class="subject-button"
+   rel="noopener noreferrer">
+  <div class="button-icon">
+    <i class="fas fa-edit"></i>
+  </div>
+  <h3>PDF Editor</h3>
+  <span>Edit text in existing PDF documents</span>
           </a>
           
           <!-- PDF on Letterhead -->
