--- a/index.html
+++ b/index.html
@@ -414,6 +414,16 @@
             <h3>Replace Pages</h3>
             <span>Swap pages in PDF documents</span>
           </a>
+
+
+           <!-- rotate pages in PDF -->
+          <a href="rotate_pages.html" class="subject-button">
+            <div class="button-icon">
+              <i class="fas fa-highlighter"></i>
+            </div>
+            <h3>Rotate pages in PDF</h3>
+            <span>Rotate any page in PDFs</span>
+          </a>
           
           <!-- Add Signature -->
           <a href="add-signature.html" class="subject-button">
