--- a/add-watermark.html
+++ b/add-watermark.html
@@ -33,7 +33,6 @@
       width: 100%;
       max-width: 640px;
       background: rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(16px);
       border-radius: 20px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2), 0 4px 16px rgba(255, 255, 255, 0.1), inset 0 1px 2px rgba(255, 255, 255, 0.3);
       overflow: hidden;
@@ -306,7 +305,7 @@
     <div class="input-container">
       <label for="watermarkText">Enter Watermark Text</label>
       <input type="text" id="watermarkText" placeholder="e.g., MYRTILLE INDUSTRIES">
-      <p>Enter text to add as a diagonal watermark from bottom-left to top-right</p>
+      <p>Enter text to add as a centered diagonal watermark from bottom-left to top-right</p>
     </div>
     <div class="input-container">
       <label for="watermarkImage">Upload Watermark Image</label>
@@ -505,7 +504,7 @@
           updateProgress(40);
 
           if (watermarkText.value.trim()) {
-            // Add diagonal text watermark from bottom-left to top-right
+            // Add centered diagonal text watermark from bottom-left to top-right
             const font = await pdfDoc.embedFont(PDFLib.StandardFonts.HelveticaBold);
             const text = watermarkText.value.trim();
             for (const page of pages) {
@@ -513,7 +512,7 @@
               const diagonalLength = Math.sqrt(width * width + height * height);
               const angle = Math.atan2(height, width) * (180 / Math.PI); // Angle of diagonal
               let fontSize = diagonalLength / 10; // Base font size
-              const textWidth = font.widthOfTextAtSize(text, fontSize);
+              let textWidth = font.widthOfTextAtSize(text, fontSize);
               const maxTextWidth = diagonalLength * 0.8; // Allow 80% of diagonal length
 
               // Adjust font size to fit text within page diagonal
@@ -524,15 +523,17 @@
               // Ensure minimum font size for short text
               if (text.length <= 10) {
                 fontSize = Math.max(fontSize, diagonalLength / 15);
+                textWidth = font.widthOfTextAtSize(text, fontSize);
               }
 
-              const textWidthFinal = font.widthOfTextAtSize(text, fontSize);
+              // Calculate text height for vertical centering
               const textHeight = font.heightAtSize(fontSize);
-              const xStart = 20; // Margin from bottom-left
-              const yStart = 20; // Margin from bottom-left
+              // Calculate the center point of the diagonal
+              const xCenter = width / 2 - (textWidth * Math.cos(angle * Math.PI / 180)) / 2;
+              const yCenter = height / 2 - (textWidth * Math.sin(angle * Math.PI / 180)) / 2;
               page.drawText(text, {
-                x: xStart,
-                y: yStart,
+                x: xCenter,
+                y: yCenter,
                 size: fontSize,
                 font: font,
                 color: PDFLib.rgb(0.231, 0.525, 0.898), // Blue (#5b86e5)
