--- a/rotate_pages.html
+++ b/rotate_pages.html
@@ -34,6 +34,7 @@
       width: 100%;
       max-width: 960px;
       background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(16px);
       border-radius: 20px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2), 0 4px 16px rgba(255, 255, 255, 0.1), inset 0 1px 2px rgba(255, 255, 255, 0.3);
       overflow: hidden;
@@ -42,9 +43,7 @@
       padding: 32px;
     }
 
-    .container:hover {
-      transform: perspective(1000px) rotateX(2deg) rotateY(2deg);
-    }
+   
 
     .header {
       padding: 24px;
