--- a/index.html
+++ b/index.html
@@ -451,7 +451,16 @@
             <h3>Reorder Pages</h3>
             <span>Rearrange PDF page order</span>
           </a>
-          
+
+
+           <!-- Reorder Pages -->
+          <a href="insert-pages.html" class="subject-button">
+            <div class="button-icon">
+              <i class="fas fa-sort"></i>
+            </div>
+            <h3>insert Pages</h3>
+            <span>insert pages in pdf</span>
+          </a>
           <!-- Mark in PDF -->
           <a href="mark-pdf.html" class="subject-button">
             <div class="button-icon">
