--- a/index.html
+++ b/index.html
@@ -478,6 +478,18 @@
             <h3>Add Watermark</h3>
             <span>Add text/image watermarks to PDFs</span>
           </a>
+
+
+           <!-- PDF on Letterhead -->
+          <a href="pdf-apollo_letterhead.html" class="subject-button">
+            <div class="button-icon">
+              <i class="fas fa-file-contract"></i>
+            </div>
+            <h3>PDF on Apollo Letterhead</h3>
+            <span>Convert documents with professional letterhead</span>
+          </a>
+
+          
         </div>
         
         <div class="footer">
