--- a/index.html
+++ b/index.html
@@ -489,6 +489,16 @@
             <span>Convert documents with professional letterhead</span>
           </a>
 
+
+          <!-- crop pdf -->
+          <a href="crop_pdf.html" class="subject-button">
+            <div class="button-icon">
+              <i class="fas fa-file-contract"></i>
+            </div>
+            <h3>crop pdf</h3>
+            <span>crop pdf</span>
+          </a>
+
           
         </div>
         
